--- a/Example Project/Resume.css
+++ b/Example Project/Resume.css
@@ -13,6 +13,37 @@ body
     max-width: 500px;
 }
 
+#phonepad {
+    font-family: Consolas;
+    border: double;
+    border-radius: 10px;
+    margin: 50px;
+    padding: 20px;
+    max-width: 500px;
+    display: flex;
+    flex-wrap: wrap;
+    gap:90px;
+}
+
+.phonepad-item {
+    font-family: Consolas;
+    border: double;
+    border-radius: 10px;
+    max-width: 70px;
+    padding: 5px;
+    text-align: center;
+    margin: 10px;
+    margin-left: auto;
+}
+
+.phonepad-button {
+    font-family: Consolas;
+    border: double;
+    border-radius: 10px;
+    min-width: 50px;
+    min-height: 50px;
+}
+
 #resume-inputs
 {
     border-top:dashed;
